# keron

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yaml  test.yml
examples/: recipe.hcl  simple.keron
src/: cli.rs  dry_run.rs  main.rs  recipe.rs
src/model/: link.rs  mod.rs  outcome.rs  package.rs  recipe.rs
src/preflight/: mod.rs
src/processor/: link_processor.rs  mod.rs
src/recipe/: engine.rs  loader.rs  mod.rs
