[package]
name = "keron"
version = "2024.3.14"
edition = "2021"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
description = "dotfile manager (symlinks, packages)"
keywords = ["dotfile", "dotfiles", "dotfile manager"]
repository = "https://github.com/icepuma/keron"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "5"
hcl-rs = "0.16"
indexmap = { version = "2", features = ["std"] }
os_info = "3"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
walkdir = "2"
which = "6"

[dev-dependencies]
indoc = "2"
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
