[package]
name = "keron"
version = "2024.3.16"
edition = "2021"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
description = "dotfile manager (symlinks, packages)"
keywords = ["dotfile", "dotfiles", "dotfile-manager"]
repository = "https://github.com/icepuma/keron"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.86"

[dev-dependencies]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
